<resources>
    <string name="app_name">Project-UI-Implementation</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="yourcodex">YourCodex</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="todo">TODO</string>
    <string name="add_user">Add User</string>
    <string name="don_t_have_an_account_create_an_account_here">Don\'t have an account? Create an Account here</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="create_account_for_yourcodex">Create Account for YourCodex</string>
    <string name="create_account">Create Account</string>
    <string name="what_type_of_books_you_enjoy_the_most">What type of books you enjoy the most?</string>
    <string name="help_us_to_know_you_better">Help us to know you better.</string>
    <string name="select_book_s_genre">Select Book\'s Genre</string>
    <string name="select_the_book_subject">Select the Book Subject</string>
    <string name="select_book_s_subject">Select Book\'s Subject</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="picks_only_for_you">Picks only for you.....</string>
    <string name="search">Search</string>
    <string name="welcome_to_the_admin_menu">Welcome to the Admin Menu,</string>
    <string name="enter_book_s_title">Enter Book\'s Title</string>
    <string name="go_back_to_home">Go Back to Home</string>
</resources>